# shadow-sdk

./: .gitignore  .vercelignore  Anchor.toml  Cargo.toml  README.md  vercel.json
apps/web/: README.md  package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/payloads/: route.ts
apps/web/app/docs/: page.tsx
apps/web/components/: DocsPage.tsx  ShadowConsole.tsx  WalletProviderRoot.tsx
apps/web/lib/: shadow.ts  wallet.ts
cli/: Cargo.toml
cli/src/: main.rs
crates/core/: Cargo.toml
crates/relayer-client/: Cargo.toml
crates/stealth/: Cargo.toml  README.md
crates/stealth/examples/: submit_intent.rs
crates/stealth/src/: lib.rs
docs/: feature-1-stealth-vault.md  publishing-crates.md
docs/architecture/: repository-structure.md
examples/: mock-intent.json  perps-order-intent.json  relayer.devnet.toml  relayer.localnet.toml  system-transfer-intent.json
idl/: stealth_vault.json
programs/stealth-vault/: Cargo.toml  README.md
programs/stealth-vault/src/: constants.rs  errors.rs  lib.rs  state.rs
programs/stealth-vault/src/instructions/: cancel_intent.rs  execute_intent.rs  initialize_vault.rs  mod.rs  rotate_authority.rs  submit_execution_intent.rs
programs/stealth-vault/tests/: lifecycle.rs
services/relayer/: .env.example  Cargo.toml  README.md
services/relayer/src/: executor.rs  main.rs  payload.rs
