[workspace]
resolver = "2"
members = [
    "cli",
    "crates/core",
    "crates/relayer-client",
    "crates/stealth",
    "programs/stealth-vault",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/shadow-labs/shadow-sdk"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
anchor-lang = "0.31.1"
clap = "4"
solana-client = "2.2.1"
solana-sdk = "2.2.1"
shellexpand = "3"
