[workspace]
resolver = "2"
members = [
    "cli",
    "crates/stealth",
    "programs/stealth-vault",
    "services/relayer",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Vijaykv5/shadow-sdk"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
anchor-lang = "=0.31.1"
clap = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-client = "=2.2.1"
solana-sdk = "=2.2.1"
shellexpand = "3"

[profile.release]
overflow-checks = true
