[package]
name = "shadow-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
serde_json.workspace = true
shadow-stealth = { path = "../crates/stealth" }
shellexpand.workspace = true
solana-client.workspace = true
solana-sdk.workspace = true

[[bin]]
name = "shadow"
path = "src/main.rs"
