[package]
name = "shadow-stealth"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
anchor-lang.workspace = true
solana-client.workspace = true
solana-sdk.workspace = true
stealth-vault = { path = "../../programs/stealth-vault", features = ["no-entrypoint"] }
