[package]
name = "shadow-stealth"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust SDK for Shadow SDK stealth vaults, private payload hashes, and execution intents on Solana"
readme = "README.md"
keywords = ["solana", "sdk", "privacy", "mev", "intent"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
solana-client.workspace = true
solana-sdk.workspace = true
