[package]
name = "stealth-vault"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Anchor program interface for Shadow SDK stealth vaults and hashed execution intents"
readme = "README.md"
keywords = ["solana", "anchor", "privacy", "mev", "intent"]
categories = ["cryptography::cryptocurrencies"]

[lib]
crate-type = ["cdylib", "lib"]
name = "stealth_vault"

[features]
default = []
anchor-debug = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang.workspace = true

[dev-dependencies]
solana-program-test = "=2.2.1"
solana-sdk.workspace = true
tokio.workspace = true
